--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "eslint -c .eslintrc src"
   },
   "devDependencies": {
-    "eslint": "~5.3.0",
-    "eslint-config-google": "~0.9.1"
+    "eslint": "~5.5.0",
+    "eslint-config-google": "~0.10.0",
+    "jest": "~23.5.0"
   }
 }
