--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "module"
   ],
   "scripts": {
+    "prepare": "npm run build",
     "build": "rollup -c rollup.config.js",
     "lint": "eslint -c .eslintrc src",
     "test": "npm run test:unit && npm run test:integration",
