--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,9 @@
     "es6": true,
     "jest": true
   },
+  "parserOptions": {
+    "sourceType": "module"
+  },
   "extends": ["eslint:recommended", "google"],
   "rules": {
     "max-len": "off",
