--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-module-confinement",
   "description": "Confining require and node_modules for the extra bit of security",
-  "version": "2.0.0-dev",
+  "version": "2.0.0",
   "main": "dist/node-module-confinement.js",
   "engines": {
     "node": ">=8.0.0"
